[package]
name = "flange_token"
version = "0.2.0"
authors = ["Milton Black"]
edition = "2021"

[dependencies]
solana-program = ">=1.17.0"
spl-token = { version="7.0.0", features = [ "no-entrypoint" ] }      
metaplex = "0.0.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]