[package]
name = "flange_token"
version = "0.2.0"
authors = ["Milton Black"]
edition = "2021"

[dependencies]
solana-program = "=1.17.0"
spl-token = { version="3.5.0", features = [ "no-entrypoint" ] }      
metaplex = "0.0.1"
borsh = "0.10.3"
ahash = "=0.8.6"
mpl-token-metadata = {version = "1.2.5", features = ["no-entrypoint"]}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]