[package]
name = "flange_token"
version = "0.2.0"
authors = ["Milton Black"]
edition = "2021"

[dependencies]
solana-program = "=1.17.0"
spl-token = { version="3.5.0", features = [ "no-entrypoint" ] }      
ahash = "=0.8.6" 
borsh = "=0.9.3"
mpl-token-metadata = "3.2.3"

[lib]
crate-type = ["cdylib", "lib"]
